// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalogue view Renders correctly for a successful call 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 mt-0.5 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              />
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-black.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="//www.60beans.de/uber-uns"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                </div>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      0
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <div
          class="flex"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="mr-6"
            data-testid="tab-discover"
            role="tab"
            type="button"
          >
            <span
              class="text-brand-black font-semibold border-b-2 pb-1.5 text-sm leading-5"
            >
              Entdecken
            </span>
          </button>
        </div>
        <div
          class="mt-4"
        >
          <div
            class="w-auto min-w-fit max-w-xs relative"
          >
            <div
              class="grid grid-cols-2 items-end"
            >
              <div />
              <div
                class="justify-self-end"
              />
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="inline-flex justify-between py-2 pr-1 border-b-2 border-brand-black text-left bg-white cursor-default"
              data-testid="button-listbox"
              id="headlessui-listbox-button-:r6:"
              type="button"
            >
              <span
                class="block truncate text-xl leading-7 font-semibold"
              >
                Alle Zubereitungsmethoden
              </span>
              <svg
                aria-hidden="true"
                class="-mr-1 ml-2 h-6 w-6 self-center"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="my-4 md:w-1/4"
        >
          <button
            class="flex w-full flex-row items-center cursor-pointer"
            data-testid="checkbox"
          >
            <div>
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M19 22H5c-1.7 0-3-1.3-3-3V5c0-1.7 1.3-3 3-3h14c1.7 0 3 1.3 3 3v14c0 1.7-1.3 3-3 3zM5 4c-.6 0-1 .4-1 1v14c0 .6.4 1 1 1h14c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1H5z"
                  fill="#212121"
                  fill-rule="evenodd"
                  stroke="#212121"
                  stroke-width="0.25"
                />
              </svg>
            </div>
            <div
              class="flex grow text-left pl-2 text-base leading-6"
            >
              Nur Entkoffeiniert
            </div>
          </button>
        </div>
        <div
          class="hidden md:flex gap-x-4"
        >
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:r7:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Bohnensorte
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:r8:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Röster
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:r9:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Herkunft
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:ra:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Packungsgröße
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex gap-x-4 justify-end"
        >
          <div
            class="w-1/2 md:hidden"
          >
            <button
              class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
              data-testid="button-filters-menu-open"
            >
              <span
                class="block truncate text-base leading-6"
              >
                Filter
              </span>
              <svg
                aria-hidden="true"
                class="-mr-1 ml-2 h-5 w-5"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="w-1/2 md:w-1/4 md:mt-4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rb:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Sortieren nach...
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
        >
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
        </div>
        <div
          class="mb-8"
        >
          <nav
            class="border-t border-coreUI-border flex items-center justify-between mb-4"
          >
            <div
              class="flex-1 flex justify-end -mt-0.5 mr-2"
            >
              <button
                class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
                data-testid="pagination-previous"
                disabled=""
              >
                <svg
                  aria-hidden="true"
                  class="mr-1.5 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span>
                  Zurück
                </span>
              </button>
            </div>
            <div
              class="flex-1 flex justify-start -mt-0.5 ml-2"
            >
              <button
                class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-secondary hover:text-coreUI-text-primary"
                data-testid="pagination-next"
              >
                <span>
                  Weiter
                </span>
                <svg
                  aria-hidden="true"
                  class="ml-1.5 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </nav>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 627 627"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="313.5"
              cy="313.5"
              fill="#D4FF81"
              r="313.5"
            />
            <path
              clip-rule="evenodd"
              d="M361.926 223.428C378.319 223.428 391.608 210.139 391.608 193.747C391.608 177.354 378.319 164.065 361.926 164.065C345.533 164.065 332.244 177.354 332.244 193.747C332.244 210.139 345.533 223.428 361.926 223.428ZM342.734 463.065C389.465 463.065 427.078 428.871 427.078 360.485V357.445C427.078 289.439 389.465 254.485 343.114 254.485C313.1 254.485 292.584 270.442 281.186 289.439V172.421H213.18V458.506H281.186V427.732C291.064 449.007 313.1 463.065 342.734 463.065ZM370.229 358.777C370.229 382.382 351.093 401.518 327.488 401.518C303.882 401.518 284.746 382.382 284.746 358.777C284.746 335.171 303.882 316.035 327.488 316.035C351.093 316.035 370.229 335.171 370.229 358.777Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Catalogue view Renders correctly for a successful call with params in the url 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 mt-0.5 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              />
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-black.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="//www.60beans.de/uber-uns"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                </div>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      0
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <div
          class="flex"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="mr-6"
            data-testid="tab-discover"
            role="tab"
            type="button"
          >
            <span
              class="text-brand-black font-semibold border-b-2 pb-1.5 text-sm leading-5"
            >
              Entdecken
            </span>
          </button>
        </div>
        <div
          class="mt-4"
        >
          <div
            class="w-auto min-w-fit max-w-xs relative"
          >
            <div
              class="grid grid-cols-2 items-end"
            >
              <div />
              <div
                class="justify-self-end"
              />
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="inline-flex justify-between py-2 pr-1 border-b-2 border-brand-black text-left bg-white cursor-default"
              data-testid="button-listbox"
              id="headlessui-listbox-button-:ri:"
              type="button"
            >
              <span
                class="block truncate text-xl leading-7 font-semibold"
              >
                Alle Zubereitungsmethoden
              </span>
              <svg
                aria-hidden="true"
                class="-mr-1 ml-2 h-6 w-6 self-center"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="my-4 md:w-1/4"
        >
          <button
            class="flex w-full flex-row items-center cursor-pointer"
            data-testid="checkbox"
          >
            <div>
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M19 22H5c-1.7 0-3-1.3-3-3V5c0-1.7 1.3-3 3-3h14c1.7 0 3 1.3 3 3v14c0 1.7-1.3 3-3 3zM5 4c-.6 0-1 .4-1 1v14c0 .6.4 1 1 1h14c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1H5z"
                  fill="#212121"
                  fill-rule="evenodd"
                  stroke="#212121"
                  stroke-width="0.25"
                />
              </svg>
            </div>
            <div
              class="flex grow text-left pl-2 text-base leading-6"
            >
              Nur Entkoffeiniert
            </div>
          </button>
        </div>
        <div
          class="hidden md:flex gap-x-4"
        >
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rj:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Bohnensorte
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rk:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Röster
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rl:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Herkunft
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="md:w-1/4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rm:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Packungsgröße
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex gap-x-4 justify-end"
        >
          <div
            class="w-1/2 md:hidden"
          >
            <button
              class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
              data-testid="button-filters-menu-open"
            >
              <span
                class="block truncate text-base leading-6"
              >
                Filter
              </span>
              <svg
                aria-hidden="true"
                class="-mr-1 ml-2 h-5 w-5"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="hidden md:block md:w-1/4"
          />
          <div
            class="w-1/2 md:w-1/4 md:mt-4"
          >
            <div
              class="w-full relative"
            >
              <div
                class="grid grid-cols-2 items-end"
              >
                <div />
                <div
                  class="justify-self-end"
                />
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="inline-flex justify-between w-full px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                data-testid="button-listbox"
                id="headlessui-listbox-button-:rn:"
                type="button"
              >
                <span
                  class="block truncate text-base leading-6"
                >
                  Sortieren nach...
                </span>
                <svg
                  aria-hidden="true"
                  class="-mr-1 ml-2 h-6 w-6"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
        >
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
          <a
            href="/product/7655228866776"
          >
            <div
              class="flex p-6"
            >
              <div
                class="flex justify-center items-center shrink-0 self-center relative w-32 h-32"
              >
                <img
                  alt="Espresso Raritäten Set"
                  class="w-32 max-h-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
                <div
                  class="inline-flex rounded-full px-2 py-0.5 absolute top-2 left-0 bg-tags-santasGray text-white border border-white"
                >
                  <span
                    class="text-xs leading-4"
                  >
                    Decaf
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col justify-between p-2"
              >
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Espresso Raritäten Set
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  60beans
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Kolumbien
                </div>
                <div
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  Filter
                </div>
                <div>
                  <span
                    class="mr-1 text-base leading-6 font-semibold"
                  >
                    ab 
                    19,99 €
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-xs leading-4"
                  >
                    (
                    10,00 €
                    /kg)
                  </span>
                </div>
              </div>
            </div>
          </a>
        </div>
        <div
          class="mb-8"
        >
          <nav
            class="border-t border-coreUI-border flex items-center justify-between mb-4"
          >
            <div
              class="flex-1 flex justify-end -mt-0.5 mr-2"
            >
              <button
                class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
                data-testid="pagination-previous"
                disabled=""
              >
                <svg
                  aria-hidden="true"
                  class="mr-1.5 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span>
                  Zurück
                </span>
              </button>
            </div>
            <div
              class="flex-1 flex justify-start -mt-0.5 ml-2"
            >
              <button
                class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-secondary hover:text-coreUI-text-primary"
                data-testid="pagination-next"
              >
                <span>
                  Weiter
                </span>
                <svg
                  aria-hidden="true"
                  class="ml-1.5 h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </nav>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 627 627"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="313.5"
              cy="313.5"
              fill="#D4FF81"
              r="313.5"
            />
            <path
              clip-rule="evenodd"
              d="M361.926 223.428C378.319 223.428 391.608 210.139 391.608 193.747C391.608 177.354 378.319 164.065 361.926 164.065C345.533 164.065 332.244 177.354 332.244 193.747C332.244 210.139 345.533 223.428 361.926 223.428ZM342.734 463.065C389.465 463.065 427.078 428.871 427.078 360.485V357.445C427.078 289.439 389.465 254.485 343.114 254.485C313.1 254.485 292.584 270.442 281.186 289.439V172.421H213.18V458.506H281.186V427.732C291.064 449.007 313.1 463.065 342.734 463.065ZM370.229 358.777C370.229 382.382 351.093 401.518 327.488 401.518C303.882 401.518 284.746 382.382 284.746 358.777C284.746 335.171 303.882 316.035 327.488 316.035C351.093 316.035 370.229 335.171 370.229 358.777Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Catalogue view Renders correctly for an error call on catalogue 1`] = `
<div>
  <div
    class="p-4 border border-coreUI-border bg-white"
  >
    <div
      class="text-center text-base leading-6"
    >
      Ein Fehler ist aufgetreten
    </div>
    <div
      class="mt-4 flex justify-center"
    >
      <button
        class="inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
        data-testid="button-prompt"
        role="button"
      >
        Erneut versuchen
      </button>
    </div>
  </div>
</div>
`;
